--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -1,317 +1,424 @@
-/*
 
-Lavish HTML CSS Template
 
-https://templatemo.com/tm-458-lavish
-		
-*/
-
-body
-{
-	background: #000000;
-	color: #999;
-	font-family: 'Raleway', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-}
-
-/* start all section */
-#home,
-#home .fp-slide,
-#home .fp-tableCell,
-
-#about,
-#about .fp-slide,
-#about .fp-tableCell,
-
-#contact,
-#contact .fp-slide,
-#contact .fp-tableCell,
-
-#portfolio,
-#portfolio .fp-slide,
-#portfolio .fp-tableCell,
-
-footer,
-footer .fp-slide,
-footer .fp-tableCell
-{
+/* Common Styles */
+#home, #about, #contact, #portfolio, footer {
     height: auto !important;
 }
 
-/* end all section */
-
-/* start all heading */
-h1,h2,h3,h4,h5
-    {
-        color: #ffffff;
-        font-weight: bold;
-    }
-/* end all heading */
-
-/* start all section */
-#work, #about, #portfolio, #contact
-    {
-        padding-top: 50px;
-        padding-bottom: 50px;
-    }
-/* end all section */
-
-/* start simpletextrotator */
-.rotating {
-  display: inline-block;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
-  -o-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-transform: rotateX(0) rotateY(0) rotateZ(0);
-  -moz-transform: rotateX(0) rotateY(0) rotateZ(0);
-  -ms-transform: rotateX(0) rotateY(0) rotateZ(0);
-  -o-transform: rotateX(0) rotateY(0) rotateZ(0);
-  transform: rotateX(0) rotateY(0) rotateZ(0);
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
-  -webkit-transform-origin-x: 50%;
+#home, #about, #portfolio, #skills, #contact {
+    padding: 50px 0 50px 0;
 }
 
-.rotating.flip {
-  position: relative;
+h1 {
+	font-weight: 700;
+}
+h1 strong {
+	font-weight: 900;
+}
+h2 {
+	line-height: 20px;
+	margin: 0;
+	font-weight: 400;
+	margin-bottom: 30px;
+	font-size: 34px;
+    text-align: center;
+    color: #7bc3d1;
+    margin-bottom: 40px;
+    font-size: 2.5em;
 }
 
-.rotating .front, .rotating .back {
-  left: 0;
-  top: 0;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
+h4 {
+	font-size: 30px;
+	font-weight: 600;
+}
+h5 {
+	text-transform: uppercase;
+	font-weight: 700px;
+	line-height: 20px;
+}
+h3{
+    font-size: 40px;
+}
+p.intro {
+	font-size: 16px;
+	margin: 12px 0 0;
+	line-height: 24px;
+	font-family: 'Open Sans', sans-serif;
 }
 
-.rotating .front {
-  position: absolute;
-  display: inline-block;
-  -webkit-transform: translate3d(0,0,1px);
-  -moz-transform: translate3d(0,0,1px);
-  -ms-transform: translate3d(0,0,1px);
-  -o-transform: translate3d(0,0,1px);
-  transform: translate3d(0,0,1px);
-}
-
-.rotating.flip .front {
-  z-index: 1;
-}
-
-.rotating .back {
-  display: block;
-  opacity: 0;
-}
-
-.rotating.spin {
-  -webkit-transform: rotate(360deg) scale(0);
-  -moz-transform: rotate(360deg) scale(0);
-  -ms-transform: rotate(360deg) scale(0);
-  -o-transform: rotate(360deg) scale(0);
-  transform: rotate(360deg) scale(0);
-}
-
-.rotating.flip .back {
-  z-index: 2;
-  display: block;
-  opacity: 1;
-  
-  -webkit-transform: rotateY(180deg) translate3d(0,0,0);
-  -moz-transform: rotateY(180deg) translate3d(0,0,0);
-  -ms-transform: rotateY(180deg) translate3d(0,0,0);
-  -o-transform: rotateY(180deg) translate3d(0,0,0);
-  transform: rotateY(180deg) translate3d(0,0,0);
-}
-
-.rotating.flip.up .back {
-  -webkit-transform: rotateX(180deg) translate3d(0,0,0);
-  -moz-transform: rotateX(180deg) translate3d(0,0,0);
-  -ms-transform: rotateX(180deg) translate3d(0,0,0);
-  -o-transform: rotateX(180deg) translate3d(0,0,0);
-  transform: rotateX(180deg) translate3d(0,0,0);
-}
-
-.rotating.flip.cube .front {
-  -webkit-transform: translate3d(0,0,100px) scale(0.9,0.9);
-  -moz-transform: translate3d(0,0,100px) scale(0.85,0.85);
-  -ms-transform: translate3d(0,0,100px) scale(0.85,0.85);
-  -o-transform: translate3d(0,0,100px) scale(0.85,0.85);
-  transform: translate3d(0,0,100px) scale(0.85,0.85);
-}
-
-.rotating.flip.cube .back {
-  -webkit-transform: rotateY(180deg) translate3d(0,0,100px) scale(0.9,0.9);
-  -moz-transform: rotateY(180deg) translate3d(0,0,100px) scale(0.85,0.85);
-  -ms-transform: rotateY(180deg) translate3d(0,0,100px) scale(0.85,0.85);
-  -o-transform: rotateY(180deg) translate3d(0,0,100px) scale(0.85,0.85);
-  transform: rotateY(180deg) translate3d(0,0,100px) scale(0.85,0.85);
-}
-
-.rotating.flip.cube.up .back {
-  -webkit-transform: rotateX(180deg) translate3d(0,0,100px) scale(0.9,0.9);
-  -moz-transform: rotateX(180deg) translate3d(0,0,100px) scale(0.85,0.85);
-  -ms-transform: rotateX(180deg) translate3d(0,0,100px) scale(0.85,0.85);
-  -o-transform: rotateX(180deg) translate3d(0,0,100px) scale(0.85,0.85);
-  transform: rotateX(180deg) translate3d(0,0,100px) scale(0.85,0.85);
-}
-/* end simpletextrotator */
-
-/* start home */       
-#home
-	{
-        padding-top: 100px;
-        padding-bottom: 50px;
-        text-align: center;
-	}
-
-#home h2
-    {
-        padding-bottom: 10px;
-        font-family: popins;
-        font-weight: lighter;
-        font-size: medium;
-    }
-    #home h1
-    {
-        padding-bottom: 10px;
-        text-decoration: underline;
-    }
-/* end home */
-
-/* start about */
-#about{
-    background-color: #fff;
-}
-#about h4
-    {
-        padding: 15px 0;
-		color: black;
-    }
-#about p{
+/* Buttons */
+.portfolio-filter li a,
+#home a {
+    display: inline-block;
+    padding: 10px 18px;
+    background-color: #7bc3d1;
+    text-decoration: none;
     color: #333;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
-#about .progress
-    {
-        border-radius: 4px;
-        background:grey;
-        height: 4px;
-    }
-#about .progress .progress-bar-danger
-    {
-        background: #D43F52;
-    }
-#about .text-top
-    {
-        padding-top: 80px;
-        color: black;
-    }
-#about span
-    {
-        color: black;
-        font-weight: bold;
-        display: block;
-        padding-bottom: 6px;
-    }
-#about small
-    {
-        font-weight: bold;
-        float: right;
-    }
-/* end about */
 
-/* start portfolio */
-#portfolio
-    {
-        background: #1a1a1a;
-        text-align: center;
-    }
-#portfolio h2
-    {
-        padding-bottom: 30px;
-    }
-#portfolio .portfolio-thumb
-    {
-        overflow: hidden;
-        position: relative;
-        margin-bottom: 10px;
-    }
+.portfolio-filter li a.active,
+.portfolio-filter li a:hover,
+#home a:hover {
+    background-color: #00b7ff;
+    color: white;
+}
 
-/* end portfolio */
+.btn-default {
+    background: transparent;
+    border: 2px solid #fff;
+    color: #fff;
+    padding: 15px 30px;
+    margin: 10px;
+    text-decoration: none;
+    display: inline-block;
+    transition: all 0.3s;
+}
 
-/* start contact */
-#contact{
+.btn-default:hover {
+    background: #D43F52;
+    border-color: #D43F52;
+    color: #fff;
+    text-decoration: none;
+}
+
+
+/* Header Section */
+
+header .intro-text {
+	padding-top: 100px;
+	padding-bottom: 50px;
+}
+
+.home {
+	width: 100%;
+	padding: 100px 0;
+	text-align: center;
+	color: #fff;
+	background: url(../images/welcome.jpg) no-repeat center top;
+	background-color: #7bc3d1;
+	background-size: cover;
+}
+
+
+/* Navigation */
+#nav {
+    z-index: 9999;
+}
+
+.navbar-custom {
+    background-color: #7bc3d1;
+    padding: 10px 0;
+    width: 100%;
+}
+
+.navbar-custom .navbar-brand {
+    font-weight: 600;
+    color: #f4f5f6;
+    text-decoration: none;
+    display: block;
+}
+
+.navbar-custom .navbar-brand:hover {
+    color: #7bc3d1;
+    text-decoration: none;
+}
+
+/* Navigation on the right */
+.navbar-custom .nav.navbar-nav {
+    flex-direction: row !important;
+}
+
+.navbar-custom .nav.navbar-nav li a {
+    display: block;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #f4f5f6;
+    text-decoration: none;
+    transition: background .3s ease-in-out;
+    
+}
+.navbar-custom .nav.navbar-nav li a:hover {
+    color: #19191a;
+    background-color: transparent;
+}
+
+/* About Section */
+#about {
+	background: #151515;
+}
+#about .about-text {
+	margin-left: 30px;
+}
+#about img {
+	width: 350px;  
+  height: 450px; 
+  object-fit: cover;
+       
+  display: block;
+}
+#about p {
+	margin-top: 20px;
+	margin-bottom: 30px;
+    color: #f2f6fb;
+}
+
+/* Skills Section */
+#skills {
+	background: #eeede9;
+}
+
+#skills hr {
+	background: rgba(255,255,255,0.3);
+}
+
+.skills-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    margin-bottom: 40px;
+}
+
+.skill-category {
+    background: rgba(255, 255, 255, 0.1);
+    padding: 30px;
+    border-radius: 10px;
+}
+
+.category-title {
+    color: #7bc3d1;
+    font-size: 1.3em;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.skill-item {
+    margin-bottom: 20px;
+}
+
+.skill-name {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.skill-bar {
+    height: 6px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 3px;
+}
+
+.skill-fill {
+    height: 100%;
+    background: #7bc3d1;
+    border-radius: 3px;
+}
+
+.tool {
+    background: #7bc3d1;
+    color: #121d1f;
+    padding: 8px 16px;
+    border-radius: 20px;
+    font-size: 0.9em;
+}
+
+.tools h3 {
+    color: #7bc3d1;
+    margin-bottom: 20px;
+}
+
+.tool-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+}
+
+@media (max-width: 600px) {
+    .skills-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
+/* Portfolio Section */
+#portfolio {
+    background: #151515;
+    text-align: center;
+}
+
+#portfolio .portfolio-thumb {
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.portfolio-filter {
+    list-style: none;
+    padding: 0;
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.portfolio-filter li {
+    display: inline-block;
+}
+
+.portfolio-thumb a {
+    position: relative;
+    z-index: 999;
+    display: block;
+}
+
+.hover-bg {
+    position: relative;
+    cursor: pointer;
+}
+
+.hover-text {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.6);
+    color: #fff;
+    opacity: 0;
+    transition: 0.4s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.hover-bg:hover .hover-text {
+    opacity: 1;
+}
+
+.portfolio-thumb img,
+.portfolio-item img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    transition: transform 0.3s;
+    object-fit: fill;
+    padding-top: 20px;
+}
+
+.portfolio-thumb:hover img,
+.portfolio-item:hover img {
+    transform: scale(1.1);
+}
+
+.portfolio-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(25, 24, 24, 0.971);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.portfolio-thumb:hover .portfolio-overlay {
+    opacity: 1;
+}
+
+/* Contact Section */
+#contact {
     background-color: #fff;
 }
 
-#contact address
-    {
-      padding-bottom: 10px;
-    }
-	
-#contact .contact-title
-    {
-		font-size: 24px;
-		font-weight: bold;
-        padding-bottom: 1=20px;
-		color: #ffffff;
-    }
-#contact .fa
-    {
-        border: 2px solid grey;
-        border-radius: 50%;
-        color: #D43F52;
-        width: 50px;
-        height: 50px;
-        line-height: 45px;
-        text-align: center;
-        margin-right: 20px;
-    }
+#contact .contact-title {
+    font-size: 24px;
+    font-weight: bold;
+    padding-bottom: 20px;
+    color: #D43F52;
+}
 
-/* end contact */
+#contact .fa {
+    border: 2px solid grey;
+    border-radius: 50%;
+    color: #D43F52;
+    width: 50px;
+    height: 50px;
+    line-height: 45px;
+    text-align: center;
+    margin-right: 20px;
+}
 
-/* start footer */
-footer
-    {
-        background-color: #333;
-        color: #fff;
-        width: 100%;
-        padding: 10px 0 10px 0;
-        text-align: center;
-    }
-/* end footer */
+/* Footer */
+footer {
+    background-color: #151515;
+    color: #fff;
+    width: 100%;
+    padding: 10px 0 10px 0;
+    text-align: center;
+}
 
-/* start social icon */
-.social-icon
-    {
-        position: relative;
-        padding-top: 20px;
-        height: 80px;
-    }
-.social-icon li
-    {
-        display: inline-block;
-        list-style: none;
-    }
-.social-icon li a
-    {
-        color: #fff;
-        text-decoration: none;
-        transition: all 0.4s ease-in-out;
-        text-align: center;
-        margin-right: 10px;
-        font-size: 40px;
-        width: 50px !important;
-    }
-.social-icon li a:hover
-    {
-        color: #D43F52;
-    }
-/* end social icon */
+/* Social Icons */
+.social-icon {
+    position: relative;
+    padding-top: 20px;
+    height: 80px;
+}
+
+.social-icon li {
+    display: inline-block;
+    list-style: none;
+}
+
+.social-icon li a {
+    color: #fff;
+    text-decoration: none;
+    transition: all 0.4s ease-in-out;
+    text-align: center;
+    margin-right: 10px;
+    font-size: 40px;
+    width: 50px !important;
+}
+
+.social-icon li a:hover {
+    color: #D43F52;
+}
+
+/* Plugin Modal Styles */
+.plugin-modal{
+     color: #111110;
+}
+
+.plugin-modal .modal-content {
+    background: #f2f6fb;
+}
+
+.plugin-modal .modal-title {
+    color: #00b7ff;
+}
+
+.plugin-modal .description {
+   font-weight: bold;
+}
+.plugin-modal .tech-stack{
+    font-weight: bold;
+}
+.plugin-modal .features-list {
+    text-align: left;
+    display: inline-block;
+}
+
+.plugin-modal .plugin-image {
+    max-width: 100%;
+    height: auto;
+}
